test for order / wrapping fix on iOS

--- a/sass/components/_search.scss
+++ b/sass/components/_search.scss
@@ -5,6 +5,7 @@
     justify-content: center;
 
     @media only screen and (max-width: $bp-xs) {
+        -webkit-order: 1;
         order: 1;
         flex: 0 0 100%;
     }
